--- a/jygj-backend/pom.xml
+++ b/jygj-backend/pom.xml
@@ -74,6 +74,11 @@
 			<version>1.1.1</version>
 		</dependency>
 		<dependency>
+	      <groupId>commons-collections</groupId>
+		  <artifactId>commons-collections</artifactId>
+	      <version>3.2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
@@ -260,6 +265,30 @@
 			<artifactId>h2</artifactId>
 			<version>1.3.176</version>
 		</dependency>
+		
+		<!-- Logging -->  
+		<dependency>  
+		    <groupId>org.slf4j</groupId>  
+		    <artifactId>slf4j-api</artifactId>  
+		    <version>1.6.6</version>  
+		</dependency>  
+		<dependency>  
+		    <groupId>org.slf4j</groupId>  
+		    <artifactId>jcl-over-slf4j</artifactId>  
+		    <version>1.6.6</version>  
+		    <scope>runtime</scope>  
+		    </dependency>  
+		<dependency>  
+		    <groupId>org.slf4j</groupId>  
+		    <artifactId>slf4j-log4j12</artifactId>  
+		    <version>1.6.6</version>  
+		    <scope>runtime</scope>  
+		</dependency>
+		<dependency>
+	<groupId>net.sf.ezmorph</groupId>
+		<artifactId>ezmorph</artifactId>
+	    <version>1.0.6</version>
+    </dependency>   
 	</dependencies>
 
 	<build>
