--- a/jygj-backend/src/main/webapp/WEB-INF/web.xml
+++ b/jygj-backend/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,19 @@
 		<url-pattern>*.html</url-pattern>
 		<url-pattern>*.json</url-pattern>
 	</servlet-mapping>
+	
+	
+  <servlet>  
+    <servlet-name>rest</servlet-name>  
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
+    <load-on-startup>2</load-on-startup>  
+  </servlet>  
+
+  <servlet-mapping>  
+    <servlet-name>rest</servlet-name>  
+    <url-pattern>/service/*</url-pattern>  
+  </servlet-mapping>
+	
 
 	<!-- 3.配置SpringMvc的编码方式的过滤器 -->
 	<filter>
