--- a/jygj-backend/pom.xml
+++ b/jygj-backend/pom.xml
@@ -29,6 +29,11 @@
 			<version>2.7.7</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+       </dependency>
+		<dependency>
 			<groupId>aopalliance</groupId>
 			<artifactId>aopalliance</artifactId>
 			<version>1.0</version>
@@ -267,7 +272,12 @@
 			<version>1.3.176</version>
 		</dependency>
 		
-		<!-- Logging -->  
+		<!-- Logging -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+       </dependency>
 		<dependency>  
 		    <groupId>org.slf4j</groupId>  
 		    <artifactId>slf4j-api</artifactId>  
